tarpc/tests/compile_fail/tarpc_service_arg_pat.stderr
error: patterns aren't allowed in RPC args
 --> $DIR/tarpc_service_arg_pat.rs:6:18
  |
6 |     async fn pat((a, b): (u8, u32));
  |                  ^^^^^^
